# scraper_engine

./: .gitignore  AGENTS.md  pyproject.toml
app/: bootstrap.py  main.py  settings.py
app/api/: __init__.py  main.py  schemas.py
app/config/: models.py  registry.py
app/extractors/: base.py  factory.py  keyword.py  llm.py  pattern.py  selector.py  table.py  utils.py
app/normalizers/: base.py  courses.py  default.py  orchestrator.py  portals.py  university.py
app/persistence/: db.py  models.py  repositories.py
app/runner/: page_runner.py  university_runner.py
app/runtime/: browser_client.py  context.py  http_client.py  openai_llm_client.py
app/schemas/: results.py
app/services/: __init__.py  scrape_service.py
configs/: knust_config.py  ucc_config.py  uds_config.py  uew_config (1).py  uew_config.py  ui_config.py  unilag_config (1).py  unilag_config.py  university_of_ghana.py  university_of_ghana_config.py  university_of_ibadan.py
configs/__old/: uew_config (1).py  unilag_config (1).py  unilag_config.py
docs/: config-builder-agent.md  config-repair-agent.md  config-validator-agent.md  unis.md
tests/: conftest.py
tests/extractors/: test_utils.py
tests/persistence/: test_repositories.py
