[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "playwright>=1.52",
    "pydantic>=2.7",
]

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true
