[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scraper-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "httpx>=0.27",
    "openai>=1.95.0",
    "playwright>=1.52",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[tool.setuptools.packages.find]
include = ["app*"]
namespaces = true
